<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5FFD2"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/direction1"
        android:layout_width="355dp"
        android:layout_height="44dp"
        android:layout_marginTop="24dp"
        android:autofillHints="address"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/direction1_hint"
        android:inputType="text"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/direction2"
        android:layout_width="355dp"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:autofillHints="address"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/direction2_hint"
        android:inputType="text"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/direction1" />

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#118937"
        android:padding="12dp"
        android:text="@string/calculate_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/direction2" />

    <ImageView
        android:id="@+id/miImagen"
        android:layout_width="69dp"
        android:layout_height="66dp"
        android:layout_margin="16dp"
        android:layout_marginTop="148dp"
        android:alpha="0.8"
        android:contentDescription="@string/app_name"
        android:elevation="10dp"
        android:src="@drawable/mapaplogo"
        app:layout_constraintBottom_toBottomOf="@+id/mapView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.172"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.215" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="415dp"
        android:layout_height="434dp"
        android:contentDescription="@string/map_content_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculateButton" />
</androidx.constraintlayout.widget.ConstraintLayout>
